--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/loja-v?autoreconnect=true
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=none
+# alterar para update caso deseje atualizar tabelas
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.platform=postgres
 
 
