--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,13 @@
 			<version>0.7.0</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+
+		
 	</dependencies>
 
 	<build>
