--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,14 @@
 			<artifactId>javax.mail</artifactId>
 			<version>1.6.2</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
+		<dependency>
+    		<groupId>com.github.javafaker</groupId>
+   			 <artifactId>javafaker</artifactId>
+    		<version>1.0.2</version>
+		</dependency>
+
 
 		
 	</dependencies>
