--- a/pom.xml
+++ b/pom.xml
@@ -112,11 +112,10 @@
 			<version>1.6.2</version>
 		</dependency>
 		
-		<!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
 		<dependency>
-    		<groupId>com.github.javafaker</groupId>
-   			 <artifactId>javafaker</artifactId>
-    		<version>1.0.2</version>
+    		<groupId>net.datafaker</groupId>
+    		<artifactId>datafaker</artifactId>
+   			 <version>2.4.2</version>
 		</dependency>
 
 
