--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>loja-v</name>
 	<description>Demo project for Spring Boot</description>
+	<packaging>jar</packaging>
+	
 	<url/>
 	<licenses>
 		<license/>
@@ -28,6 +30,9 @@
 	</scm>
 	<properties>
 		<java.version>11</java.version>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+		<maven.test.skip>true</maven.test.skip>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -158,6 +163,7 @@
 			</plugin>
 
 		</plugins>
+		<finalName>loja-v</finalName>
 	</build>
 
 </project>
